# shardingite

./: Cargo.toml
examples/: hello.rs
src/: lib.rs  parser.rs  rewriter.rs  router.rs  sql_daemon.rs
tests/: crud.rs  exception.rs
