[package]
name = "shardingite"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = { version = "0.9.0", default-features = false }
rusqlite = { version = "0.25.3", default-features = false, features = ["bundled"] }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
env_logger = "0.8.4"
